--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Reto</title>
 </head>
 <body>
@@ -16,15 +16,37 @@
         <img src="assets/img/drawers.jpg" alt="drawer">
       </div>
       <div class="container__content">
-        <h3>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h3>
-        <p>Ever been in a room and felt like something was missing? Perhaps 
-          it felt slightly bare and uninviting. I’ve got some simple tips 
+        <h3 class="container__content_title">Shift the overall look and feel by adding these wonderful touches to furniture in your home</h3>
+        <p>Ever been in a room and felt like something was missing? Perhaps
+          it felt slightly bare and uninviting. I’ve got some simple tips
           to help you make any room feel complete.</p>
         <div class="container__content_perfil">
           <div class="data">
-            <img src="assets/img/avatar-michelle.jpg" alt="perfil">
-            <h4>Michelle Appleton</h4>
-            <span>28 Jun 2020</span>
+            <img class="drawer" src="assets/img/avatar-michelle.jpg" alt="perfil">
+            <div class="data__user">
+              <h4>Michelle Appleton</h4>
+              <span>28 Jun 2020</span>
+            </div>
+          </div>
+          <button class="btn" id="btn_share">
+            <ion-icon name="share-social"></ion-icon>
+          </button>
+        </div>
+
+        <div class="share">
+          <div class="social__icon">
+            <div class="social__icon_details">
+              <h3>SHARE</h3>
+              <a class="icons" href="https://www.instagram.com/victorrosario.1890/">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+              <a class="icons" href="https://twitter.com/Victor_R1890">
+                <ion-icon name="logo-twitter"></ion-icon>
+              </a>
+              <a class="icons" href="https://github.com/Victor1890">
+                <ion-icon name="logo-github"></ion-icon>
+              </a>
+            </div>
           </div>
         </div>
       </div>
