--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </button>
         </div>
 
-        <div class="share">
+        <div class="share" id="card_share">
           <div class="social__icon">
             <div class="social__icon_details">
               <h3>SHARE</h3>
@@ -53,5 +53,6 @@
     </div>
   </main>
   <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
